<resources>
    <string name="app_name">Tshombo</string>
    <string name="app_name_handler">Handler</string>
    <string name="app_name_drawer">DrawApp</string>
    <string name="draw">Draw</string>
    <string name="send">Send</string>
    <string name="name">Nom</string>
    <string name="number">Numero</string>
    <string name="button_people">Button People</string>
    <string name="button_schedule">Button Schedule</string>
    <string name="loading">Chargement …</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Accueil</string>
    <string name="search">Recherche</string>
    <string name="stores">Magasins</string>
    <string name="my_store">Mon magasin</string>
    <string name="logout">Déconnexion</string>
    <string name="personal_actions">Actions</string>
    <string name="open_nav">Open Drawer</string>
    <string name="close_nav">Close Drawer</string>
    <string name="store_not_found">Vous n\'avez aucun magasin</string>
    <string name="create_store">Passer à nos bureau afin de créer votre magasin.</string>
    <string name="share">Partager</string>
    <string name="todo">TODO</string>
    <string name="authentication">Authentification</string>
    <string name="please_auth">Authentifiez-vous afin d\'accéder à l\'interface d\'accueil.</string>
    <string name="connection">Connexion</string>
    <string name="dont_account_text">Vous n\'avez pas de compte ?</string>
    <string name="create_account">Créer un compte</string>
    <string name="email">E-mail</string>
    <string name="passwd">Mot de passe</string>
    <string name="create_account_continue">Veuillez créer un compte avant de continuer.</string>
    <string name="login">Se connecter</string>
    <string name="already_account">Déjà un compte chez nous ?</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="you_have_create_account">Vous avez crée un compte</string>
    <string name="all_fields_required">Tous les champs sont réquis</string>
    <string name="voir_plus">Voir plus</string>
    <string name="populaires">Populaires</string>
    <string name="samsung_s23">Samsung s23</string>
    <string name="_982000fc">982000fc</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="av_mascherano_33">Av. mascherano, 33</string>
    <string name="mwisho_ni_apa">Mwisho ni apa</string>
    <string name="_150_t_l_phones">150 téléphones</string>
    <string name="loc"> -11.6207777,27.530394,12z</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="magasin">Magasin</string>
    <string name="google_maps">Google maps</string>
    <string name="normal_click">Normal Click</string>
    <string name="long_click">Long Click</string>
    <string name="custom_message">I\'m Android Developer</string>
    <string name="start_draw_something">Start draw something</string>
    <string name="bleu">Bleue</string>
    <string name="jaune">Jaune</string>
    <string name="verte">Verte</string>
    <string name="rouge">Rouge</string>
    <string name="take_picture">Take Picture</string>
    <string name="open_camera">Open Camera</string>
    <string name="todos">TODO</string>
    <string name="go_to_second_fragment">Go to second Fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="go_to_first_screen">Go to first screen</string>
    <string name="title_activity_drawer_fragment">DrawerFragmentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="go_to_first_fragment">Go to first fragment</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="t_l_phone_non_trouv">Téléphone non trouvé</string>
    <string name="ajouter">Ajouter</string>
    <string name="ajouter_un_t_l_phone">Ajouter un téléphone</string>
    <string name="nom">Nom</string>
    <string name="prix">Prix</string>
    <string name="description">Description</string>
    <string name="photo">Photo</string>
    <string name="enregistrer">Enregistrer</string>
</resources>