<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/store_icon"
            android:title="@string/stores" />

        <item
            android:id="@+id/my_store"
            android:icon="@drawable/my_store_icon"
            android:title="@string/my_store" />

    </group>

    <item
        android:icon="@drawable/logout_icon"
        android:id="@+id/section"
        android:title="@string/personal_actions">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>


</menu>