<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightToolBar"
        android:background="@color/background"
        app:titleTextColor="@color/fourth"
        app:titleCentered="true"
        app:menu="@menu/app_bar_menu"
        app:title="Camera App"
        app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:foregroundTint="@color/fourth"
        app:popupTheme="@color/fourth"
        app:navigationIconTint="@color/fourth"
        android:elevation="@dimen/elevation"
        tools:ignore="MissingConstraints" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:background="@color/fourth"
        android:layout_marginTop="56dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todos" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnTakePictures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/background"
        android:layout_gravity="bottom|right"
        android:contentDescription="@string/open_camera"
        android:text="@string/take_picture"
        app:icon="@drawable/camera"
        android:textColor="@color/text_shadow_white"
        app:iconTint="@color/text_shadow_white"
        tools:ignore="RtlHardcoded" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>