<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/third"
    android:backgroundTint="@color/third"
    android:elevation="@dimen/elevation"
    app:cardCornerRadius="@dimen/radius"
    app:contentPadding="@dimen/padding">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewPhoneImg"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/third"
                tools:ignore="MissingConstraints">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/phoneSheapeImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:src="@drawable/store_icon"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/magasinName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/mwisho_ni_apa"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/fourth"/>

                <TextView
                    android:id="@+id/magasinAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/av_mascherano_33"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/fourth" />

                <TextView
                    android:id="@+id/nbrPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/_150_t_l_phones"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/fourth"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginBottom="@dimen/padding"
            android:background="@color/fourth"
            android:layout_height="1.5dp"/>

        <LinearLayout
            android:id="@+id/go"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location"
                android:text="@string/loc"
                android:textColor="@color/fourth"
                android:fontFamily="@font/intermedium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableLeftCompat="@drawable/location" />

        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>