<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/padding"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/create_account"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/fourth"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/heightTwoText"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/create_account_continue"
                    android:textColor="@color/sixth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightFormField"
                    android:layout_marginTop="@dimen/heightBetween"
                    app:boxCornerRadiusBottomEnd="@dimen/radius"
                    app:boxCornerRadiusTopStart="@dimen/radius"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/fourth"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightFormField"
                        android:background="@color/third"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:textColorHint="@color/fourth" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightFormField"
                    android:layout_marginTop="@dimen/heightBetween"
                    app:boxCornerRadiusBottomEnd="@dimen/radius"
                    app:boxCornerRadiusTopStart="@dimen/radius"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/fourth"
                    app:layout_constraintTop_toBottomOf="@+id/layout_username"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightFormField"
                        android:background="@color/third"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/fourth" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_passwd"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightFormField"
                    android:layout_marginTop="@dimen/heightBetween"
                    app:boxCornerRadiusBottomEnd="@dimen/radius"
                    app:boxCornerRadiusTopStart="@dimen/radius"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/fourth"
                    app:layout_constraintTop_toBottomOf="@+id/layout_email"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_passwd"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightFormField"
                        android:background="@color/third"
                        android:hint="@string/passwd"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_btn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/heightButton"
                    android:layout_marginTop="@dimen/heightBetween"
                    android:fontFamily="@font/intermedium"
                    android:text="@string/create_account"
                    android:textAllCaps="false"
                    android:textColor="@color/fourth"
                    app:cornerRadius="@dimen/padding"
                    app:layout_constraintTop_toBottomOf="@id/layout_passwd" />

                <LinearLayout
                    android:id="@+id/login_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/heightTwoText"
                    android:padding="@dimen/heightTwoText"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/create_btn">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/intermedium"
                        android:text="@string/already_account"
                        android:textColor="@color/fourth" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/heightTwoText"
                        android:fontFamily="@font/intermedium"
                        android:text="@string/login"
                        android:textColor="@color/secondary"
                        android:textStyle="bold" />

                </LinearLayout>

                <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:indeterminateTint="@color/fourth"
                    android:background="@drawable/border_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/layout_passwd"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>